Fixed minor display issue on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,13 @@ section.first-section{
 h1.first-section{
     font-size: 3rem;
     font-weight: 700;
+    padding: 0px;
+    margin: 0px;
+}
+@media screen and (max-width: 400px) {
+    section.first-section{
+        padding: 20px 0px;
+    }
 }
 h3.first-section{
     font-size: 2rem;
@@ -511,7 +518,7 @@ p.quote{
 /*ORCHESTRAS*/
 .concerts button{
     display: block;
-    width: 50vh;
+    width: 300px;
     margin: 20px 20px;
     padding: 10px;
 }
